# WatchTower

./: .gitignore  License.txt  README.md
Sprint1/: cgilmer2.commits.txt  cgilmer2.md  ctucke24.commits.txt  ctucke24.md  dnguye38.commits.txt  dnguye38.md  jcurlin3.md  rfranqui.commits.txt  rfranqui.md
Sprint1/ssui/: commits.txt  sprint1.md
Sprint2/: cgilmer2.commits.txt  cgilmer2.md  ctucke24.md  ctucke24_commit2.txt  dnguye38.commits.txt  dnguye38.md  jcurlin3.commits.txt  jcurlin3.md  rfranqui.commits.txt  rfranqui.md
Sprint2/ssui/: commits.txt  ssui.md
Sprint3/: cgilmer2.commits.txt  cgilmer2.md  commits.dnguye38.txt  commits.rfranqui.txt  ctucke24.md  ctucke24_commit3.txt  dnguye38.md  jcurlin3.commits.txt  jcurlin3.md  rfranqui.md
Sprint3/ssui/: commits.ssui.txt  ssui.md
Sprint4/: cgilmer2.commits.txt  cgilmer2.md  commits.rfranqui.txt  ctucke24.md  dnguye38.commits.txt  dnguye38.md  jcurlin3.commits.txt  jcurlin3.md  rfranqui.md  sprint4-commit-ctucke.txt
Sprint4/ssui/: ssui.commits.txt  ssui.md
Sprint5/: cgilmer2.commits.txt  cgilmer2.md  dnguye38.commits.txt  jcurlin3.commits.txt  sprint5-commit-ctucke.txt
Sprint5/ssui/: ssui.commits.txt  ssui.md
backend/: app.py  client.py  db.py
frontend/Jacky-practice/: Data.php  connectall.php  index.php  styles.css  styles1.css  test.html  (+2 more)
helloplus/cgilmer2/: Cargo.toml  README.md  rustfmt.toml
helloplus/cgilmer2/src/: error.rs  main.rs  message.rs
helloplus/cgilmer2/src/os/: mod.rs  unix.rs  windows.rs
watchtower-sensor/: Cargo.toml  README.md  build.rs  macos_installer.pkg  sensor.rc
watchtower-sensor/installer/windows/: config.json  sensor.iss
watchtower-sensor/src/: error.rs  lib.rs  message.rs
watchtower-sensor/src/sys/: darwin.rs  linux.rs  mod.rs  windows.rs
watchtower-sensor/src/types/: battery.rs  cpu.rs  disk.rs  gpu.rs  hello.rs  mod.rs  net.rs  ram.rs
watchtower-ui/: README.md  interface.ui  login.ui  main.py  ui_interface.py
(+46 files in other folders)
