[package]
name = "watchtower-sensor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sensor"

[dependencies]
argh = "0.1.10"
chrono = {version = "0.4", features = ["serde"]}
color-eyre = "0.6"
num_cpus = "1.15.0"
once_cell = "1.17"
os_info = "3.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sysinfo = {version = "0.28.4", features = ["serde"]}
thiserror = "1.0"
ureq = { version = "2.6", features = ["json"] }
uuid = {version = "1.3", features = ["serde"]}

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation", 
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Performance",
    "Win32_System_Power",
    "Win32_System_Registry", 
    "Win32_System_SystemInformation"
]

[target.'cfg(windows)'.dependencies]
tray-item = "0.7.1"
wmi = "0.12"

[target.'cfg(unix)'.dependencies]
md5 = "0.7"
rustix = "0.36"

[target.'cfg(target_os = "macos")'.dependencies]
default-net = "0.14.1"
libc = "0.2"
battery = "0.7.8"
core-foundation-sys = "0.8.4"
io-kit-sys = "0.3.0"
sysctl = "0.4.0"
tray-item = "0.7.1"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
