[package]
name = "watchtower-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
color-eyre = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = {version = "1.3", features = ["serde"]}

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_SystemInformation"]

[target.'cfg(unix)'.dependencies]
md5 = "0.7"
rustix = "0.36"
